--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: 2019校园移动套餐
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: 200元打1年  全国流量放心用  200分钟国内主叫  30条短信
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://github.com/luhaogithub/luhaogithub.github.io/blob/master/photo_2019-06-23_13-44-08.jpg
 
 #
 # Flags below are optional
