--- a/_config.yml
+++ b/_config.yml
@@ -1,86 +1,92 @@
-#
-# This file contains configuration flags to customize your site
-#
+**北京校园移动包年卡：全国流量不限量+200分钟通话+1000分钟同学圈  200元包年**
 
-# Name of your site (displayed in the header)
-name: 2019校园移动套餐
+**预售时间 2019/07/15————2019/10/30**
 
-# Short bio or description (displayed in the header)
-description: 200元打1年  全国流量放心用  200分钟国内主叫  30条短信
-
-# URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar:https://github.com/luhaogithub/luhaogithub.github.io/blob/master/images/photo_2019-06-23_13-44-08.jpg
-
-#
-# Flags below are optional
-#
-
-# Includes an icon in the footer for each username you enter
-footer-links:
-  dribbble:
-  email:
-  facebook:
-  flickr:
-  github: barryclark/jekyll-now
-  instagram:
-  linkedin:
-  pinterest:
-  rss: # just type anything here for a working RSS icon
-  twitter: jekyllrb
-  stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
-  youtube: # channel/<your_long_string> or user/<user-name>
-  googleplus: # anything in your profile username that comes after plus.google.com/
+* [1.套餐内容](#1)
+* [2.套餐详情](#2)
+* [3.购买地址](#3)
+* [4.售后服务+福利](#4)
+* [5.常见问题](#5)
 
 
-# Enter your Disqus shortname (not your username) to enable commenting on posts
-# You can find your shortname on the Settings page of your Disqus account
-disqus:
+<h6 id="1">1.套餐内容</h6>
+![image](https://upload-images.jianshu.io/upload_images/18578347-372b3c6b2d8c2507.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
-# Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
-google_analytics:
+<h6 id="2">2.套餐详情</h6>
 
-# Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
-# Used for Sitemap.xml and your RSS feed
-url:
+1.移动历年价格优惠，网络速度及稳定性一如既往可靠，现推出200元包年活动，只要不超套餐（主要指语音），无需额外缴纳费用；
+2.本卡全国通用流量15G+30GB专属定向流量、40GB校园WLAN、30条短信均为4年有效，含激活当月。本卡当月套餐流量资源用尽后上网限速至最高1Mbps，当月累计使用流量超100GB后限速至最高128Kbps；
+3.定向专属流量APP包括：
+![image](https://upload-images.jianshu.io/upload_images/18578347-f05191b50fba4a1a.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+3.本卡办理没有年龄、出生年月限制，需实名；
+4.本卡全国各地都可办理，快递送卡，无需快递费用；
+5.本卡无需学生证，不在北京也可使用。
+6.本卡激活当月资源和月费按日折扣，次月起全月计费；
+7.一年到期后可发送短信续费；
 
-# If you're hosting your site at a Project repository on GitHub pages
-# (http://yourusername.github.io/repository-name)
-# and NOT your User repository (http://yourusername.github.io)
-# then add in the baseurl here, like this: "/repository-name"
-baseurl: ""
+<h6 id="3">3.购买地址</h6>
+扫描二维码或办理
+![image](https://upload-images.jianshu.io/upload_images/18578347-ef1265c5771d45c5.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
-#
-# !! You don't need to change any of the configuration flags below !!
-#
+<h6 id="4">4.售后服务+福利</h6>
+客服微信：xiaoyuanyidong2019 （提供拉售后群服务）
+微信群不定期红包雨返现福利活动
+微信公众号：北京高校校园卡 （定期发送相关公告及优惠信息）
 
-permalink: /:title/
 
-# The release of Jekyll Now that you're using
-version: v1.2.0
+<h6 id="5">5.常见问题</h6>
 
-# Jekyll 3 now only supports Kramdown for Markdown
-kramdown:
-  # Use GitHub flavored markdown, including triple backtick fenced code blocks
-  input: GFM
-  # Jekyll 3 and GitHub Pages now only support rouge for syntax highlighting
-  syntax_highlighter: rouge
-  syntax_highlighter_opts:
-    # Use existing pygments syntax highlighting css
-    css_class: 'highlight'
 
-# Set the Sass partials directory, as we're using @imports
-sass:
-  style: :expanded # You might prefer to minify using :compressed
+1.问：我不是学生可以买吗？
 
-# Use the following plug-ins
-gems:
-  - jekyll-sitemap # Create a sitemap using the official Jekyll sitemap gem
-  - jekyll-feed # Create an Atom feed using the official Jekyll feed gem
+答：可以！
 
-# Exclude these files from your production _site
-exclude:
-  - Gemfile
-  - Gemfile.lock
-  - LICENSE
-  - README.md
-  - CNAME
+2.问：人不在北京可以购买么？
+
+答：可以！快递上门，无需快递费用。
+
+3.问：可以选号码？
+
+答：必须可以，精品号越早下手越好
+
+4.问：到期后可以续费不？怎么续费？
+
+答：到期后可以短信续费，具体短信内容会通知。
+
+5.问：下单时需要填写哪些信息？
+
+答：物流信息可在“我的订单”中输入姓名、身份证号进行查询；本商品仅限校园客户办理，签收商品时需本人签收并提供本人身份证及高考准考证或录取通知书或学生证。为保证外地客户开学前收到号卡，开学前一周请选择到京自取（不要再选择配送到外地）
+
+6.问：下单后多久发货？
+
+答：下单后三天内发货，下单后可收到查询订单地址短信，运单号也在这里显示。
+
+7.问：可以用别人身份证购买么？
+
+答：可以，但需本人人脸识别认证激活后才可使用。
+
+8.问：卡丢了怎么办？
+
+答：可申请在线补发，也可到任意北京营业厅进行补卡。
+
+9.问：发的是大卡小卡？
+
+答：三合一卡片，可根据自己手机选择大中小卡片使用。
+
+10.问：无限流量有使用上限么？
+
+答：没有使用上限，但是超过套餐内容后会限速。
+
+11.问：一个人可以购买几张校园卡？
+
+答：同一个身份证最多购买五张校园卡。
+
+12.问：选好的号码点击下一步显示被占用？
+
+答：当前号码已被其他人选中，如对方2小时未支付，则该号码会被再次释放出来，建议可以看下其他号码或等俩小时后再查看是否还存在该号码。
+
+
+如有其他疑问可添加以上服务人员或公众号详细咨询！
+
+```
+### End
