--- a/_config.yml
+++ b/_config.yml
@@ -1,24 +1,24 @@
-**北京校园移动包年卡：全国流量不限量+200分钟通话+1000分钟同学圈  200元包年**
+#**北京校园移动包年卡：全国流量不限量+200分钟通话+1000分钟同学圈  200元包年**
 
-**预售时间 2019/07/15————2019/10/30**
+#**预售时间 2019/07/15————2019/10/30**
 
-* [1.套餐内容](#1)
-* [2.套餐详情](#2)
-* [3.购买地址](#3)
-* [4.售后服务+福利](#4)
-* [5.常见问题](#5)
+#* [1.套餐内容](#1)
+#* [2.套餐详情](#2)
+#* [3.购买地址](#3)
+#* [4.售后服务+福利](#4)
+#* [5.常见问题](#5)
 
 
-<h6 id="1">1.套餐内容</h6>
-![image](https://upload-images.jianshu.io/upload_images/18578347-372b3c6b2d8c2507.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+#<h6 id="1">1.套餐内容</h6>
+#![image](https://upload-images.jianshu.io/upload_images/18578347-372b3c6b2d8c2507.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
-<h6 id="2">2.套餐详情</h6>
+#<h6 id="2">2.套餐详情</h6>
 
-1.移动历年价格优惠，网络速度及稳定性一如既往可靠，现推出200元包年活动，只要不超套餐（主要指语音），无需额外缴纳费用；
-2.本卡全国通用流量15G+30GB专属定向流量、40GB校园WLAN、30条短信均为4年有效，含激活当月。本卡当月套餐流量资源用尽后上网限速至最高1Mbps，当月累计使用流量超100GB后限速至最高128Kbps；
-3.定向专属流量APP包括：
-![image](https://upload-images.jianshu.io/upload_images/18578347-f05191b50fba4a1a.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
-3.本卡办理没有年龄、出生年月限制，需实名；
+#1.移动历年价格优惠，网络速度及稳定性一如既往可靠，现推出200元包年活动，只要不超套餐（主要指语音），无需额外缴纳费用；
+#2.本卡全国通用流量15G+30GB专属定向流量、40GB校园WLAN、30条短信均为4年有效，含激活当月。本卡当月套餐流量资源用尽后上网限速至最高1Mbps，当月累计使用流量超100GB后限速至最高128Kbps；
+#3.定向专属流量APP包括：
+#![image](https://upload-images.jianshu.io/upload_images/18578347-f05191b50fba4a1a.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+#3.本卡办理没有年龄、出生年月限制，需实名；
 4.本卡全国各地都可办理，快递送卡，无需快递费用；
 5.本卡无需学生证，不在北京也可使用。
 6.本卡激活当月资源和月费按日折扣，次月起全月计费；
